# isaac-osu-delv-m1.4

./: FSM_TASK_DESC.md  README.md  activate_launch.sh  cspell.json  gitman.yaml  requirements.txt  requirements2.txt  run_formatter.sh  run_launch_config.sh  setup_conda_env.sh  upload_code.template.sh
drail_extensions/: extension.toml  setup.py
drail_extensions/drail_extensions/: __init__.py
drail_extensions/drail_extensions/core/: __init__.py
drail_extensions/drail_extensions/core/envs/: manager_based_marl_env.py
drail_extensions/drail_extensions/core/scripts/: play.py  (+4 more)
drail_extensions/drail_extensions/research_ashton/: __init__.py
drail_learning/: gitman.yaml
drail_learning/point_cloud_encoders/: README.md  pyproject.toml  setup.py  test_pointconv.py
drail_learning/point_cloud_encoders/point_cloud_encoders/pointconv/: pointconv.py
drail_learning/point_cloud_encoders/point_cloud_encoders/pointconv/utils/: __init__.py  torch_utils.py
drail_learning/point_cloud_encoders/point_cloud_encoders/pointconv/utils/pointnet2_ops_lib/: setup.py
drail_learning/rsl_rl/config/: dummy_config.yaml
drail_learning/rsl_rl_ashton/: pyproject.toml
drail_learning/rsl_rl_ashton/config/: dummy_config.yaml
drail_learning/rsl_rl_demarl/: pyproject.toml
drail_learning/rsl_rl_demarl/rsl_rl_demarl/: __init__.py
drail_learning/rsl_rl_depth_map/: pyproject.toml
drail_learning/rsl_rl_depth_map/config/: dummy_config.yaml
drail_learning/rsl_rl_drail/: pyproject.toml
drail_learning/rsl_rl_drail/rsl_rl_drail/: __init__.py
drail_learning/rsl_rl_point_clouds/: pyproject.toml
scheduler_scripts/: allocate_resoruce.py  allocate_resource.py  dummy_job.py  fetch_and_run_job.py  job_scheduler_script.sh
tiamat_fsm_task_scripts/: VLM_preds.py  cli_args.py  depth2worldtest.txt  language_instruction.py  map.py  object_detection.py  pose_test.txt  pose_wrapper.py  test_vlm.py  utils.py
tiamat_fsm_task_scripts/archive/: conversion.py  conversion2.py
(+194 files in other folders)
